# extractGrib

./: .gitignore  CMakeLists.txt  README.md
etc/config/: ECDS_DINI_config_exp.h  IREPS_config_exp.h  config.METIE.LinuxRH7gnu  config_exp.h  config_mbr002.h  config_mbr005.h  config_mbr015.h
etc/ecf/: create_suite.py  ensmsel_to_list.py  sbatch.h  tail.h
etc/griblists/: standing.list  user.list
etc/namelist_inc/: 01-grib1.inc  02-grid_simple.inc  05-fstart.inc  07-ensemble.inc  99-footer.inc
etc/paramlists/: param_source.cfg
share/: CMakeLists.txt
share/config/: config.ecgb-cca
share/ecf/: extract_grib.ecf  extrgrib_clean.ecf  head.h  makegrib.def  qsub.h  qsub_clean.h  sub.h  sub_clean.h
share/griblists/: user.list
share/namelist_inc/: 00-frommemory.inc  00-header.inc  00-tomemory.inc  01-grib1.inc  01-grib2.inc  02-grid_ccsds.inc  05-dtg.inc  40-exclude-hybrid.inc
share/paramlists/: param_source.cfg
share/rules/: point_src.inc  rp_src.inc
