################################################################################

cmake_minimum_required( VERSION 3.12 FATAL_ERROR )


################################################################################

project( harmlbcs LANGUAGES NONE )

################################################################################

add_subdirectory (bin)
add_subdirectory (share)
