################################################################################

cmake_minimum_required( VERSION 3.12 FATAL_ERROR )


################################################################################

project( extractGrib LANGUAGES NONE )

################################################################################

add_subdirectory (bin)
add_subdirectory (share)
