install( DIRECTORY griblists DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )

install( DIRECTORY namelist_inc DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )

install( DIRECTORY paramlists DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )

install( DIRECTORY rules DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )

install( DIRECTORY config DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )

install( DIRECTORY ecf DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )
